# is-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  install
example/: .gitignore  Dockerfile  Makefile  README.md  client.cpp  hello.cpp  service.cpp
example/client/: Makefile  client.cpp
example/helloworld/: Makefile  hello.cpp
example/msgs/: hello.proto
example/service/: Dockerfile  Makefile  service.cpp
examples/: README.md
examples/client/: CMakeLists.txt  client.cpp
examples/helloworld/: CMakeLists.txt  hello.cpp
examples/protos/: CMakeLists.txt  hello.proto
examples/service/: CMakeLists.txt  service.cpp
include/is/: cli.hpp  core.hpp  io.hpp  is.hpp  log.hpp  rpc.hpp  tracing.hpp
include/is/middleware/: log.hpp  metrics.hpp  tracing.hpp
is/: core.cpp  core.hpp  rpc.hpp
is/rpc/: context.hpp  interceptor.hpp  service-provider.cpp  service-provider.hpp
is/rpc/interceptors/: log-interceptor.cpp  log-interceptor.hpp  metrics-interceptor.cpp  metrics-interceptor.hpp
